k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snapverse
  labels:
    name: snapverse
    environment: production
